--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,16 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.4",
+    "@nestjs/websockets": "^9.1.4",
     "@prisma/client": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
